--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 torch
 gurobipy
 pandas
-scikit-learn
+scikit-learn==1.0.2
 tensorflow==2.10.1
 alibi
 tqdm
 auto_LiRPA @ git+https://github.com/Verified-Intelligence/auto_LiRPA.git
 wandb
+lime==0.2.0.1
+choix==0.3.5
